# sysmon

./: .gitignore  CMakeLists.txt  FILES.md  Kconfig  LICENSE  README.md  idf_component.yml
example/: CMakeLists.txt  README.md
example/main/: CMakeLists.txt  main.c
include/: sysmon.h  sysmon_config.h  sysmon_http.h  sysmon_json.h  sysmon_stack.h  sysmon_utils.h
src/: sysmon.c  sysmon_handlers.c  sysmon_http.c  sysmon_json.c  sysmon_stack.c  sysmon_utils.c
www/: index.html
www/css/: sysmon-theme-color-vars.css  sysmon-theme-utility-classes.css  sysmon-theme.css
www/js/: app.js  charts.js  config.js  table.js  theme.js  utils.js
